Additional QOL changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img id='bottom-bracket' src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3pvYKg8f0ca2KzRtTq3--Y_gjA2o0jncvfaqt2WAcgnG9ZBt6gQ" alt="bracket">
     <div id='text'>
     
-    <script src='example.js'></script>
+    <script src='sketch.js'></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
